compiler/testData/cli/jvm/internalArgOverrideOffLanguageFeature.out
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:-InlineClasses

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

compiler/testData/cli/jvm/inlineClass.kt:1:1: error: the feature "inline classes" is disabled
inline class Foo(val x: Int)
^
COMPILATION_ERROR
